--- a/studentScore.html
+++ b/studentScore.html
@@ -8,14 +8,14 @@
 <body>
     <table style="width:75%">
         <tr>
-          <th>Student Name</th>
+          <th>Title</th>
           <th>Score</th> 
           <th>Turned in Status</th>
         </tr>
         <tr>
-          <td>dfd</td>
-          <td>df</td>
-          <td>dfdfdf</td>
+          <td>5A1</td>
+          <td>7/10</td>
+          <td>On-time</td>
         </tr>
         <tr>
           <td></td>
